
syntax = "proto3";


service DbQuery {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(QueryRequest) returns (QueryResponse) {}
}

message CreateRequest {
  string Model = 1;
  string Database = 2;
}

message CreateResponse {
  string Model = 1;
  string Database = 2;
}

message GetRequest {
  string Model = 1;
  string Database = 2;
}

message GetResponse {
  string Model = 1;
  string Database = 2;
}

message UpdateRequest {
  string Model = 1;
  string Database = 2;
}

message UpdateResponse {
  string Model = 1;
  string Database = 2;
}

